2001-01-18 22:41 GMT+1 JFL (Mafact) <jfl@mafact.com>
   *harbour/hb_slex.vc
    * added HBMAKE 
   harbour/makefile.vc
    * added HBMAKE 

2001-01-18 00:18 GMT+1 JFL (Mafact) <jfl@mafact.com>
   *harbour/makefile.vc
    * minor form adjustement
   *harbour/include/hbclass.ch
    * Clean the ::Class reference wich does'nt work 
   *harbour/source/debug/dbgtmenu.prg
    * Adding a blank line at the end of file to test Simplex and VC++
   *harbour/source/rtl/tclass.prg
    * Clean the ::Class reference wich does'nt work 
   *harbour/source/rtl/tobject.prg
    * Clean the ::Class reference wich does'nt work 



2001-01-17 21:45 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *source/vm.estack.c
        *fixed initialization of items during the stack reallocation
        *STACK_* constants can be defined using a compiler
        command line

2001-01-16 22:15 GMT+1 JFL (Mafact) <jfl@mafact.com>
    *harbour/makefile.vc
    *harbour/source/compiler/genobj32.c
    *harbour/source/compiler/harbour.l
    *harbour/source/compiler/harbour.slx
    *harbour/source/compiler/hbfix.c
    *harbour/source/pp/pragma.c
     *All minor type casting for VC++
    *harbour/source/rtl/tobject.prg
     *code re-aligned (no modif)


2001-01-14 15:15 UTC+0100 Ryszard Glab <rglab@imid.med.pl>

    *include/hbapi.h
        *modified union in 'asRefer' structure
        
    *source/vm/codebloc.c
    *source/vm/hvm.c
    *source/vm/itemapi.c
        *fixed support for detached local variables passed by
        the reference

2001-01-13 02:25 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/compiler/genc.c
   * source/compiler/harbour.c
   * source/pp/pragma.c
     + Added support for #pragma BEGINDUMP ... [#pragma STOPDUMP] or EOF.
       /* BEGINDUMP & STOPDUMP are just a suggestion. */

   * utils/hbpp/hbpp.c
   * source/pp/pplib.c
     + Added empty stub hb_compInlineAdd() (needed by pragma.c)

   * tests/inline_c.prg
     + Added code to demonstrate #pragam BEGINDUMP
