@@ -8,6 +8,6 @@ C_SOURCES=\
 	gtcgi.c \
 	mousecgi.c \
 
-LIBNAME=gtstd
+LIBNAME=gtcgi
 
 include $(TOP)$(ROOT)config/lib.cf
